# transkit

./: .flake8  .gitignore  .pre-commit-config.yaml  Cycles.ipynb  Injectables.ipynb  LICENSE  README.md  TransKit.ipynb  injectables.py  injectio.py  lab.sh  publish.sh  pyproject.toml  search.sh
.github/workflows/: build.yml
data/: transition_sample.py
injectio/: fit.py  injectables.py  medications.py  pharma.py
notebooks/: Cycles.ipynb  Cycles.md  Injectables.ipynb  Injectables.md  TransKit.ipynb  TransKit.md
tests/: test_pharma.py
tools/: generate_injections.py  install.sh  lab.sh  publish.sh  search.sh
transkit/: fit.py  medications.py  models.py  pharma.py
transkit/tests/: conftest.py  test_fit.py  test_pharma.py
