[tool.poetry]
name = "transkit"
version = "0.1.0"
description = ""
authors = ["Violet Nēšana <violet@nesana.org>"]

[tool.poetry.dependencies]
python = "^3.6.1"
matplotlib = "^3.3.1"
numpy = "^1.18.0"
pandas = "^1.0.5"
scipy = "^1.5.1"
lmfit = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^2.1.5"
jupyter-contrib-nbextensions = "^0.5.1"
jupytext = "^1.7.1"
pre-commit = "^2.9.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 79
target-version = ['py38']
include = '/(transkit|tools|tests)/.*\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
