[tool.poetry]
name = "transkit"
version = "0.1.0"
description = ""
authors = ["Violet Nēšana <violet@nesana.org>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10"
numpy = "^2.4"
pandas = "^2.3"
scipy = "^1.17"
lmfit = "^1.3"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
flake8 = "^7.3"
jupyterlab = "^4.5"
jupytext = "^1.19"
pre-commit = "^4.6.0"
pytest = "^9.0"
pytest-cov = "^7.1"
setuptools = "^81.0,<82"

[tool.black]
line-length = 79
target-version = ['py38']
include = '/(transkit|tools|tests)/.*\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
